@@ -1,3 +1,7 @@
+drkns 11.10.2017 22:04:47 +0100 - build 5064
+
+1. В 5049 погнулось повышение привилегий при создании папки.
+
 zg 08.10.2017 14:45:39 +0300 - build 5063
 
 1. 0003514: Возможность задать приоритет макросов, определяемым через MCTL_ADDMACRO.
